ejs git commit -m  ejs git commit -m  ejs

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ mern-express/node_modules
 mern-express/package-lock.json
 post-form-data/node_modules
 post-form-data/package-lock.json
+ejsTemplate/node_modules
+ejsTemplate/package-lock.json
 
