--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ post-form-data/node_modules
 post-form-data/package-lock.json
 ejsTemplate/node_modules
 ejsTemplate/package-lock.json
+static-files/node_modules
+static-files/package-lock.json
 
