--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@ ejsTemplate/node_modules
 ejsTemplate/package-lock.json
 static-files/node_modules
 static-files/package-lock.json
-
+login-register-forms/node_modules
+login-register-forms/package-lock.json
+node_modules
+package-lock.json
