--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "node assg.js"
   },
   "author": "shanay",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.15.0"
+  }
 }
- 
