--- a/exchange-rate-api/package.json
+++ b/exchange-rate-api/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "dependencies": {
     "express": "^4.18.1",
-    "node-fetch": "^3.2.4"
+    "node-fetch": "^3.2.4",
+    "request": "^2.88.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
