--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,6 @@
         "sourceType": "module"
     },
     "rules": {
-        "indent" : ["error","tab"]
+        "indent" : ["error"]
     }
 }
