--- a/crud/package.json
+++ b/crud/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongo": "^0.1.0"
+    "mongo": "^0.1.0",
+    "path": "^0.12.7"
   }
 }
